content/en/2.0.x/operation/helm/values.md
---
title: 'Helm Chart Values'
linkTitle: 'Values'
weight: 190
aliases:
  - '../../helm-values/'
---
# usp-core-waap-operator {#usp-core-waap-operator}

![Version: 2.0.2](https://img.shields.io/badge/Version-2.0.2-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 2.0.0](https://img.shields.io/badge/AppVersion-2.0.0-informational?style=flat-square)

Helm chart for the USP Core WAAP operator.

## Values {#values}

| Key | Type | Default | Description |
|---|---|---|---|
| operator.config | object | `{"waapSpecDefaults":{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-proxy","version":"2.0.2"},"watchedNamespaces":[]}` | Settings for operator config |
| operator.config.waapSpecDefaults | object | `{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-proxy","version":"2.0.2"}` | *Optional*: operation defaults, see field 'operation' in the Core WAAP CRD for possible settings and merge behavior |
| operator.config.watchedNamespaces | list | `[]` | *Optional*: list of namespaces for which to process custom resources or ingress manifests (defaults to all). |
| operator.image | string | `"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-operator"` | Operator container image |
| operator.imagePullSecretName | string | `""` | *Optional*: Name of the image pull secret to be used by the service account |
| operator.replicas | int | `1` | Number of replicas (0 or 1) |
| operator.resources | object | `{"limits":{"cpu":"","memory":""},"requests":{"cpu":"","memory":""}}` | Resource settings for WAAP operator NOTE: If the fields are left empty, the operator deployment will not contain the corresponding settings, and as a consequence, the clusters own defaults will apply. |
| operator.resources.limits.cpu | string | `""` | CPU resource limit per request |
| operator.resources.limits.memory | string | `""` | Memory resource limit per request |
| operator.resources.requests.cpu | string | `""` | CPU resources required per request |
| operator.resources.requests.memory | string | `""` | Memory resources required per request |
| operator.securityContext | object | `{"allowPrivilegeEscalation":false,"privileged":false,"readOnlyRootFilesystem":true,"runAsGroup":65533,"runAsNonRoot":true,"runAsUser":185}` | Security context settings for WAAP operator |
| operator.securityContext.allowPrivilegeEscalation | bool | `false` | Controls whether a process can gain more privileges than its parent process (defaults to `false`). |
| operator.securityContext.privileged | bool | `false` | Run container in privileged mode (defaults to `false`). |
| operator.securityContext.readOnlyRootFilesystem | bool | `true` | Whether this container has a read-only root filesystem (defaults to `true`). |
| operator.securityContext.runAsGroup | int | `65533` | The GID to run the entrypoint of the container process (defaults to `65533`). |
| operator.securityContext.runAsNonRoot | bool | `true` | Indicates that the container must run as a non-root user (defaults to `true`). |
| operator.securityContext.runAsUser | int | `185` | The UID to run the entrypoint of the container process (defaults to `185`). |
| operator.serviceAccount | string | `"usp-core-waap-operator"` | Name of service account |
| operator.version | string | `"2.0.0"` | Version of operator to deploy |

---

Autogenerated from chart metadata using [helm-docs v1.14.2](https://github.com/norwoodj/helm-docs/releases/v1.14.2)
